--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,15 @@ span {
     color: #5F564D;
 }
 
-li {
+.preparation-card ul li {
+    font-family: "Outfit", sans-serif;
+    font-size: 16px;
+    line-height: 30px;
+    list-style: none;
+    position: relative;
+}
+
+.ingredients ul li {
     font-family: "Outfit", sans-serif;
     font-size: 16px;
     line-height: 30px;
@@ -97,7 +105,25 @@ li {
     color: #854632;
 }
 
+.instructions ol li {
+    font-family: "Outfit", sans-serif;
+    font-size: 16px;
+    line-height: 30px;
+    position: relative;
+    padding-left: 10px;
+}
 
+.list-numbers {
+    padding-left: 27px;
+    color: #854632;
+    font-family: "Outfit", sans-serif;
+    font-size: 16px;
+    line-height: 30px;
+}
+
+.list-numbers > li::marker {
+    font-weight: bold;
+  }
 
 hr {
     background-color: #E3DDD7;
