--- a/css/style.css
+++ b/css/style.css
@@ -170,3 +170,35 @@ hr {
     font-weight: bold;
     color: #854632;
 }
+
+/* Mobile */
+@media (max-width: 440px) {
+    body {
+        margin: 0;
+    }
+
+    img {
+        margin: 0;
+        width: 400px;
+        height: 171px;
+    }
+
+    .title-recipe {
+        font-family: "Young Serif", serif;
+        font-size: 35px;
+    }
+
+    .recipe-card {
+        width: 100%;
+        height: 100%;
+    }
+
+    .preparation-card {
+        width: 311px;
+        height: 196px;
+    }
+
+    .img {
+        width: 100%;
+    }
+}
